--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/aruZeta/cristotractor.ts/issues"
   },
-  "homepage": "https://github.com/aruZeta/cristotractor.ts#readme"
+  "homepage": "https://github.com/aruZeta/cristotractor.ts#readme",
+  "dependencies": {
+    "discord.js": "^14.6.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.6",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
+  }
 }
