--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "ts-node src/main.ts",
+    "start": "ts-node src/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
