--- a/src/config.json
+++ b/src/config.json
@@ -1,9 +1,13 @@
 {
+  "bot": {
     "clientId": "1034834473403023422",
-    "guildId": "951249218595594240",
+    "mainGuild": {
+      "id": "951249218595594240",
+      "adminRoleId": "951791502500171816",
+      "insultarId": "<@270644120450629633>",
+    },
     "permissions": "8",
     "userPfp": "https://media.discordapp.net/attachments/954311835815923722/970289030136754186/IMG-20210915-WA0000.jpg?width=1005&height=670",
-    "insultarId": "<@270644120450629633>",
-    "adminRoleId": "951791502500171816",
-    "letters": "abcdefghijklmnopqrstuvwxyz"
+  },
+  "letters": "abcdefghijklmnopqrstuvwxyz"
 }
