[fix, add] Wrong tsconfig includes and ignoring dist

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,11 +21,10 @@
         "baseUrl": "./"
     },
     "files": [
-        "src/main.ts"
+        "src/index.ts"
     ],
     "include": [
-        "./src/*.ts",
-        "./src/utils/*.ts"
+        "./src/**/*.ts"
     ],
     "exclude": [
         "node_modules",
